# platformer

./: .gitignore  Cargo.toml  README.md  build.sh  gen.sh  player.aseprite  player.rs  template.txt
.cargo/: config.toml
cmd/: build.sh  gen.sh
docs/: 2022-12-07.html  index.html  mygame.html
image/: gen.sh
memory-test/src/: alloc.rs  lib.rs
platformer/: Cargo.toml  README.md  build.sh  cart.min.wasm
platformer/.cargo/: config.toml
platformer/src/: aabb.rs  body.rs  direction.rs  game.rs  graphics.rs  image.rs  input.rs  lib.rs  lookup.rs  player.rs  save.rs  vector2.rs  world.rs  world_map.rs
platformer/src/animation/: walk.rs
platformer/src/image/: bg.rs  board_right.rs  board_up.rs  climb.rs  fruit.rs  jump.rs  lie.rs  lookup.rs  player.rs  tile.rs  walk.rs  walk1.rs
res/: gen.sh  jump.rust  lie.rust  lookup.rust  player.rust  title.aseprite  walk.aseprite
src/: aabb.rs  alloc.rs  animation.rs  body.rs  game.rs  game_scene.rs  geometry.rs  graphics.rs  image.rs  input.rs  lib.rs  music.rs  netplay.rs  palette.rs  save.rs  scene.rs  se.rs  sound.rs  title_scene.rs  world.rs  world_map.rs
src/animation/: walk.rs
src/geometry/: aabb.rs  direction.rs  point.rs  vector2.rs
src/image/: board_right.rs  board_up.rs  carrot.rs  climb.rs  jump.rs  ladder.rs  lie.rs  lookup.rs  misaki_gothic_2nd-export.rs  misaki_gothic_2nd.rs  player.rs  player_ladder0.rs  player_ladder1.rs  slip.rs  sting.rs  tile.rs  title.rs  walk0.rs  walk1.rs  walk2.rs  walk3.rs
src/music/: goal.rs  (+1 more)
template/: html.mustache
tile_edit/: Cargo.toml  world.aseprite  world.rs
(+4 files in other folders)
