[package]
edition = "2021"
name = "cart"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
buddy-alloc = {version = "0.4.1", optional = true}
bytes = "1.2"
fastrand = "1.6.0"
lazy_static = "1.4.0"

[profile.dev]
# なぜか opt-level = 0 や 's' など特定の値で rust-lld でエラーになる
# よくわからないが https://github.com/rust-lang/rust/issues/46645#issuecomment-423912553
# で言われている問題？
opt-level = 'z'

[profile.release]
debug = false
lto = true
opt-level = 's'
panic = 'abort'

[features]
# use `--no-default-features` or comment out next line to disable allocator
default = ["buddy-alloc"]
