[package]
edition = "2021"
name = "cart"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
buddy-alloc = {version = "0.4.1", optional = true}
fastrand = "1.6.0"
lazy_static = "1.4.0"

[profile.release]
debug = true
lto = true
opt-level = "z"
panic = 'abort'

[features]
# use `--no-default-features` or comment out next line to disable allocator
default = ["buddy-alloc"]
